<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background"
    android:paddingBottom="16dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="50dp"
    tools:context="com.example.richa.assignment.MainActivity">

    <TextView
        android:id="@+id/txt_number"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/txt_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <GridLayout
        android:id="@+id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_number"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:gravity="center"
        android:orientation="horizontal"
        android:rowCount="4">


        <Button
            android:id="@+id/bt_true"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:background="#00000000"
            android:text="@string/bt_true"
            android:textColor="@android:color/holo_green_dark" />

        <Button
            android:id="@+id/bt_false"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:background="#00000000"
            android:text="@string/bt_false"
            android:textColor="@android:color/holo_red_dark" />

        <Button
            android:id="@+id/bt_next"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:background="#00000000"
            android:text="@string/bt_next" />

        <Button
            android:id="@+id/bt_cheat"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:background="#00000000"
            android:text="@string/bt_cheat" />

        <Button
            android:id="@+id/bt_score"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:background="#00000000"
            android:text="@string/bt_score" />

        <Button
            android:id="@+id/bt_hint"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:background="#00000000"
            android:text="@string/bt_hint" />

    </GridLayout>


</RelativeLayout>
